Enhance README with comprehensive application details
Expanded README with detailed application features, tech stack, prerequisites, project structure, setup instructions, default credentials, usage guide, and data storage information.